# latin-pos-intertext-search

./: .gitignore  .gitmodules  README.md  make_charts.ipynb  make_charts_with_constraints.ipynb  pyproject.toml
latin-embeddings-comparison/notebooks/: bamman-w2v-lemma-TT.ipynb  bamman-w2v-lemma.ipynb  bamman-w2v-lemma.py  bert_eval.py  bert_utils.py  create_synonym_pairs.ipynb  latin-embeddings-evaluation-summary.ipynb
latin-embeddings-search/data/: .gitignore
latin-embeddings-search/data/datasets/: comps_bert.csv  comps_bert_lemmas.csv  comps_bert_pos.csv
latin-embeddings-search/data/texts/process/: TESTFILE.txt
latin-embeddings-search/notebooks/: aggregate_results.py  bert_embeddings.py  intertext-search-bert-pos-constrained.py  intertext-search-bert.ipynb  intertext-search-bert.py  intertext-search-prep.ipynb  intertext-search.ipynb  intertext-search.py  out.txt  pos_tag.py
