[tool.poetry]
name = "naacl-hlt-2021-latin-intertextuality"
version = "0.1.0"
description = "Profiling of Intertextuality in Latin Literature Using Word Embeddings"
authors = ["Patrick J. Burns, James A. Brofos, Kyle Li, Pramit Chaudhuri, Joseph P. Dexter"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
appdirs = "^1.4.4"
attrs = "^21.4.0"
beautifulsoup4 = "^4.10.0"
bioservices = "^1.8.4"
cattrs = "^1.10.0"
click = "^8.0.4"
cltk = "1.1.6a1"
colorama = "^0.4.4"
colorlog = "^6.6.0"
cycler = "^0.11.0"
easydev = "^0.12.0"
gevent = "^21.12.0"
grequests = "^0.6.0"
gseapy = "^0.10.8"
joblib = "^1.1.0"
lxml = "^4.8.0"
matplotlib = "^3.5.1"
nltk = "^3.7"
numpy = "^1.22.2"
pandas = "^1.2.5"
pexpect = "^4.8.0"
pillow = "^9.0.1"
scikit-learn = ">=1.0.2"
scipy = "^1.8.0"
torch = "^1.11.0"
torchaudio = "^0.11.0"
torchvision = "^0.12.0"
tqdm = "^4.63.0"
treetaggerwrapper = "^2.3"
xmltodict = "^0.12.0"
gensim = ">=4.0.0"
ipykernel = "^6.29.5"
levenshtein = "^0.26.1"
ipywidgets = "^8.1.5"
natsort = "^8.4.0"
seaborn = "^0.13.2"
transformers = "^4.46.3"
spacy = "3.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"